[gd_scene load_steps=5 format=3 uid="uid://d0srafpochl6y"]

[ext_resource type="Texture2D" uid="uid://ckyo5673aivb1" path="res://Picture6.png" id="1_yyl4d"]
[ext_resource type="Texture2D" uid="uid://bxdc70a6a0h2i" path="res://Picture5.png" id="2_2lj4e"]
[ext_resource type="Script" path="res://overlay/GridContainer.gd" id="3_a58id"]
[ext_resource type="Texture2D" uid="uid://d3cjtg6ldydik" path="res://Picture4.png" id="3_swgic"]

[node name="gameOverlay" type="Node2D"]

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Settings" type="Panel" parent="Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MenuButton" type="MenuButton" parent="Panel/Settings"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 250.0
offset_bottom = 250.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("1_yyl4d")
flat = false
alignment = 0
icon_alignment = 1
item_count = 2
popup/item_0/text = "Exit"
popup/item_0/checked = true
popup/item_0/id = 0
popup/item_1/text = "Musik"
popup/item_1/checked = true
popup/item_1/id = 1
popup/item_1/disabled = true

[node name="Actions" type="Panel" parent="Panel"]
layout_mode = 0
offset_top = 584.0
offset_right = 64.0
offset_bottom = 648.0

[node name="MenuButton" type="MenuButton" parent="Panel/Actions"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 288.0
offset_bottom = 250.0
scale = Vector2(0.2, 0.2)
icon = ExtResource("2_2lj4e")
item_count = 2
popup/item_0/text = "Patent ansehen"
popup/item_0/id = 1
popup/item_1/text = "MapView"
popup/item_1/checked = true
popup/item_1/id = 2

[node name="Stats" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 952.0
offset_right = 1152.0
offset_bottom = 160.0

[node name="GridContainer" type="GridContainer" parent="Panel/Stats"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 200.0
offset_bottom = 156.0
columns = 2
script = ExtResource("3_a58id")

[node name="Spieler1" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Spieler 1: 
"

[node name="Geldstatus1" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5 Riesen"

[node name="Spieler2" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Spieler 2: "

[node name="Geldstatus2" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5 Riesen"

[node name="Spieler3" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Spieler 3: "

[node name="Geldstatus3" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5 Riesen"

[node name="Spieler4" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Spieler 4: "

[node name="Geldstatus4" type="Label" parent="Panel/Stats/GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "5 Riesen"

[node name="Rounds" type="Panel" parent="Panel"]
layout_mode = 0
offset_left = 1000.0
offset_top = 488.0
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="Panel/Rounds"]
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 144.0
offset_bottom = 152.0
texture = ExtResource("3_swgic")
expand_mode = 1

[node name="Label" type="Label" parent="Panel/Rounds/TextureRect"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 61.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 25
text = "100"

[node name="Label2" type="Label" parent="Panel/Rounds/TextureRect"]
layout_mode = 0
offset_left = 80.0
offset_top = 64.0
offset_right = 125.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 25
text = "300"
